Consolidate inputs for final knapsack

--- a/teamchoice.ipynb
+++ b/teamchoice.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "4  0.00000  0.00000  0.00000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "686  0.49764  0.46681  0.48561    2.36600       0.525778  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "(22.0, 53.6, 5)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "(12, [0, 3])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,12 +567,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Minimising Returns Data per Player Type (If return is equal, focus on the cheapest)"
+    "### Final 0-1 Knapsack for choosing optimal budget for each player type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memo = dict() ##\n",
+    "def finalknapsack(budget,points_grid,prices_grid):\n",
+    "    ## Base cases\n",
+    "    if budget == 0:\n",
+    "        return 0 if len(prices_grid) == 0 else float('-inf')\n",
+    "    if len(prices_grid) == 0:\n",
+    "        return 0\n",
+    "    if len(prices_grid[0]) == 0:\n",
+    "        return float('-inf')\n",
+    "                \n",
+    "    ## Retrieve solutions from the memo\n",
+    "    if (budget,len(prices_grid), len(prices_grid[0])) in memo.keys():\n",
+    "        return memo[(budget,len(prices_grid), len(prices_grid[0]))]\n",
+    "    \n",
+    "    ## Repetitive sub-problem\n",
+    "    if prices_grid[0][0] > budget:\n",
+    "        points_grid[0] = points_grid[0][1:]\n",
+    "        prices_grid[0] = prices_grid[0][1:]\n",
+    "        memo[(budget,len(prices_grid), len(prices_grid[0]))] = finalknapsack(budget,points_grid,prices_grid)\n",
+    "        return memo[(budget,len(prices_grid), len(prices_grid[0]))]\n",
+    "    else:\n",
+    "        a = points_grid[0][0] + finalknapsack(budget-prices_grid[0][0],points_grid[1:],prices_grid[1:])\n",
+    "        points_grid[0] = points_grid[0][1:]\n",
+    "        prices_grid[0] = prices_grid[0][1:]\n",
+    "        b = finalknapsack(budget,points_grid,prices_grid)\n",
+    "        memo[(budget,len(prices_grid), len(prices_grid[0]))] = max(a,b)\n",
+    "        return memo[(budget,len(prices_grid), len(prices_grid[0]))]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generating Final Team\n",
+    "1. Choose players (maximising the points return) for each position based on all possible budgets: **InitialKnapsackAlgorithm\n",
+    "    - Goalkeepers: 2 players\n",
+    "    - Defenders: 5 players\n",
+    "    - Midfielders: 5 players\n",
+    "    - Forwards: 3 players\n",
+    "2. Create dataframes for each position with data on each possible budget, the points return, and the players chosen.\n",
+    "    - Minimise the data by eliminating all budgets returning similar point returns (retain the lowest budget)\n",
+    "    - Eliminate all instances where the return is `-inf` i.e. no possible player choice\n",
+    "3. Choose final team by maximising the points return for the full team based on data from (1) which has been cleaned based on (2). **#FinalKnapsackAlgorithm "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +696,7 @@
        "4  29.81739    8.4  [488, 521]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,9 +711,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>points</th>\n",
+       "      <th>price</th>\n",
+       "      <th>players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>29.05626</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>[263, 305, 475, 630, 664]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>44.17771</td>\n",
+       "      <td>19.8</td>\n",
+       "      <td>[263, 282, 472, 475, 630]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>52.76377</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>[263, 282, 291, 472, 630]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>54.51690</td>\n",
+       "      <td>20.1</td>\n",
+       "      <td>[263, 291, 338, 472, 630]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>54.69178</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>[282, 291, 338, 472, 630]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     points  price                    players\n",
+       "1  29.05626   19.6  [263, 305, 475, 630, 664]\n",
+       "2  44.17771   19.8  [263, 282, 472, 475, 630]\n",
+       "3  52.76377   20.0  [263, 282, 291, 472, 630]\n",
+       "4  54.51690   20.1  [263, 291, 338, 472, 630]\n",
+       "5  54.69178   20.2  [282, 291, 338, 472, 630]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "defenders = pd.DataFrame(chooseplayers(df=predictions,position='DEF'),columns=['price','points','players'])\n",
     "defenders = defenders.groupby(by='points').min()\n",
@@ -673,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +872,7 @@
        "4  42.16404   22.6  [111, 168, 174, 285, 619]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +960,7 @@
        "4  18.93582   14.6   [27, 453, 676]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,66 +974,249 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Final 0-1 Knapsack for choosing optimal budget for each player type"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "memo = dict() ##\n",
-    "def finalknapsack(budget,points_grid,prices_grid):\n",
-    "    ## Base cases\n",
-    "    if budget == 0:\n",
-    "        return 0 if len(prices_grid) == 0 else float('-inf')\n",
-    "    if len(prices_grid) == 0:\n",
-    "        return 0\n",
-    "    if len(prices_grid[0]) == 0:\n",
-    "        return float('-inf')\n",
-    "                \n",
-    "    ## Retrieve solutions from the memo\n",
-    "    if (budget,len(prices_grid), len(prices_grid[0])) in memo.keys():\n",
-    "        return memo[(budget,len(prices_grid), len(prices_grid[0]))]\n",
-    "    \n",
-    "    ## Repetitive sub-problem\n",
-    "    if prices_grid[0][0] > budget:\n",
-    "        points_grid[0] = points_grid[0][1:]\n",
-    "        prices_grid[0] = prices_grid[0][1:]\n",
-    "        memo[(budget,len(prices_grid), len(prices_grid[0]))] = finalknapsack(budget,points_grid,prices_grid)\n",
-    "        return memo[(budget,len(prices_grid), len(prices_grid[0]))]\n",
-    "    else:\n",
-    "        a = points_grid[0][0] + finalknapsack(budget-prices_grid[0][0],points_grid[1:],prices_grid[1:])\n",
-    "        points_grid[0] = points_grid[0][1:]\n",
-    "        prices_grid[0] = prices_grid[0][1:]\n",
-    "        b = finalknapsack(budget,points_grid,prices_grid)\n",
-    "        memo[(budget,len(prices_grid), len(prices_grid[0]))] = max(a,b)\n",
-    "        return memo[(budget,len(prices_grid), len(prices_grid[0]))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20"
+       "[[1.2206299999999999,\n",
+       "  10.856919999999999,\n",
+       "  11.977229999999999,\n",
+       "  20.1811,\n",
+       "  29.817390000000003,\n",
+       "  29.99474,\n",
+       "  31.953470000000003,\n",
+       "  39.830510000000004,\n",
+       "  40.00786,\n",
+       "  41.03717,\n",
+       "  41.37934],\n",
+       " [29.05626,\n",
+       "  44.177710000000005,\n",
+       "  52.76377000000001,\n",
+       "  54.51690000000001,\n",
+       "  54.69178000000001,\n",
+       "  55.76575000000001,\n",
+       "  57.69376000000001,\n",
+       "  58.64657000000001,\n",
+       "  59.53030000000001,\n",
+       "  59.89542,\n",
+       "  61.82343,\n",
+       "  62.42746000000001,\n",
+       "  63.47174000000001,\n",
+       "  64.01045,\n",
+       "  65.26727000000001,\n",
+       "  65.83882,\n",
+       "  66.90761,\n",
+       "  67.03032,\n",
+       "  67.25773,\n",
+       "  68.67863,\n",
+       "  69.09427,\n",
+       "  70.23027,\n",
+       "  70.36618,\n",
+       "  70.87009,\n",
+       "  71.41677,\n",
+       "  71.83241,\n",
+       "  71.9328,\n",
+       "  73.0688,\n",
+       "  73.10432,\n",
+       "  73.20471,\n",
+       "  73.65472,\n",
+       "  74.00561,\n",
+       "  74.38153,\n",
+       "  74.51744,\n",
+       "  74.93193,\n",
+       "  74.96744999999999,\n",
+       "  75.06783999999999,\n",
+       "  75.32962,\n",
+       "  75.41873000000001,\n",
+       "  75.55203,\n",
+       "  76.15791,\n",
+       "  76.54872,\n",
+       "  77.65035,\n",
+       "  77.75074000000001,\n",
+       "  77.78626,\n",
+       "  78.23627,\n",
+       "  78.33666,\n",
+       "  78.59844,\n",
+       "  79.06347,\n",
+       "  79.51347999999999,\n",
+       "  79.61386999999999,\n",
+       "  79.64939000000001,\n",
+       "  79.87565000000001,\n",
+       "  80.01156,\n",
+       "  80.26205999999999,\n",
+       "  80.36245,\n",
+       "  80.39796999999999,\n",
+       "  80.40966,\n",
+       "  80.76308,\n",
+       "  80.77476999999999,\n",
+       "  81.12525,\n",
+       "  81.16076999999999,\n",
+       "  81.17246,\n",
+       "  81.51166,\n",
+       "  81.55886999999998,\n",
+       "  81.60803999999999,\n",
+       "  81.63005999999999,\n",
+       "  81.65525,\n",
+       "  82.00613999999999],\n",
+       " [18.82408,\n",
+       "  25.79296,\n",
+       "  36.17637,\n",
+       "  38.62645,\n",
+       "  42.16403999999999,\n",
+       "  44.417139999999996,\n",
+       "  47.21922,\n",
+       "  49.38226999999999,\n",
+       "  49.45795999999999,\n",
+       "  51.635369999999995,\n",
+       "  51.68630999999999,\n",
+       "  56.65353999999999,\n",
+       "  57.97503999999999,\n",
+       "  58.906639999999996,\n",
+       "  60.42511999999999,\n",
+       "  62.86119999999999,\n",
+       "  64.37968,\n",
+       "  65.06794,\n",
+       "  66.63278,\n",
+       "  68.74924999999999,\n",
+       "  70.31409,\n",
+       "  70.38358,\n",
+       "  72.52082999999999,\n",
+       "  74.06488999999999,\n",
+       "  76.17358999999999,\n",
+       "  77.56165,\n",
+       "  78.04297,\n",
+       "  79.40248,\n",
+       "  79.5462,\n",
+       "  79.66444,\n",
+       "  80.04099,\n",
+       "  80.97567000000001,\n",
+       "  81.39264,\n",
+       "  81.51087999999999,\n",
+       "  81.61418,\n",
+       "  81.70665,\n",
+       "  82.12361999999999,\n",
+       "  82.22911,\n",
+       "  82.24186,\n",
+       "  82.83752000000001,\n",
+       "  83.65297000000001,\n",
+       "  84.06994,\n",
+       "  84.18818,\n",
+       "  84.29148,\n",
+       "  85.14755,\n",
+       "  86.52113,\n",
+       "  87.25974,\n",
+       "  89.10211,\n",
+       "  89.24583,\n",
+       "  90.66969,\n",
+       "  91.08666,\n",
+       "  91.2049,\n",
+       "  91.3082,\n",
+       "  91.57359,\n",
+       "  92.65985,\n",
+       "  93.39083,\n",
+       "  93.76956999999999,\n",
+       "  93.83391999999999,\n",
+       "  94.25088999999998,\n",
+       "  95.33715,\n",
+       "  95.34276,\n",
+       "  95.82407999999998,\n",
+       "  96.47461,\n",
+       "  98.96513,\n",
+       "  99.3821,\n",
+       "  99.44645,\n",
+       "  99.86342,\n",
+       "  100.94968,\n",
+       "  100.95528999999999,\n",
+       "  101.43661,\n",
+       "  101.68627000000001,\n",
+       "  102.16758999999999,\n",
+       "  102.54632999999998,\n",
+       "  103.63259,\n",
+       "  104.11390999999999,\n",
+       "  104.11952,\n",
+       "  104.77005,\n",
+       "  105.25137,\n",
+       "  105.25697999999998,\n",
+       "  106.50441,\n",
+       "  106.54135,\n",
+       "  108.70536,\n",
+       "  109.12233,\n",
+       "  110.20859,\n",
+       "  110.68991,\n",
+       "  110.69551999999999,\n",
+       "  111.4265,\n",
+       "  113.37281999999999,\n",
+       "  114.51028],\n",
+       " [1.14059,\n",
+       "  8.05884,\n",
+       "  10.85942,\n",
+       "  17.768990000000002,\n",
+       "  18.93582,\n",
+       "  23.388460000000002,\n",
+       "  25.39701,\n",
+       "  28.84528,\n",
+       "  30.214219999999997,\n",
+       "  31.381049999999995,\n",
+       "  32.98932,\n",
+       "  33.37885,\n",
+       "  34.829319999999996,\n",
+       "  34.95561,\n",
+       "  35.60547,\n",
+       "  36.56231,\n",
+       "  36.77013,\n",
+       "  37.41999,\n",
+       "  37.665659999999995,\n",
+       "  38.136039999999994,\n",
+       "  38.44181,\n",
+       "  38.912189999999995,\n",
+       "  39.15786,\n",
+       "  39.387010000000004,\n",
+       "  39.53093,\n",
+       "  40.163160000000005,\n",
+       "  40.68683,\n",
+       "  40.87921,\n",
+       "  41.46298,\n",
+       "  41.70865,\n",
+       "  42.17903,\n",
+       "  43.43,\n",
+       "  43.553259999999995,\n",
+       "  43.66369,\n",
+       "  44.61802,\n",
+       "  45.91784,\n",
+       "  46.0411,\n",
+       "  47.292069999999995,\n",
+       "  47.52576,\n",
+       "  48.295739999999995,\n",
+       "  49.10416,\n",
+       "  49.230450000000005,\n",
+       "  49.88031,\n",
+       "  50.12598,\n",
+       "  50.59636,\n",
+       "  51.84733,\n",
+       "  53.147149999999996,\n",
+       "  53.27041,\n",
+       "  54.33517,\n",
+       "  54.52138000000001,\n",
+       "  54.75507,\n",
+       "  55.7094,\n",
+       "  57.00922]]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = [[2,3,4],[5,6,7],[8,9,1]]\n",
-    "finalknapsack(20,a,a)"
+    "points_grid = [list(goalkeepers.points),list(defenders.points),list(midfielders.points),list(forwards.points)]\n",
+    "prices_grid = [list(goalkeepers.price),list(defenders.price),list(midfielders.price),list(forwards.price)]\n",
+    "players_grid = [list(goalkeepers.players),list(defenders.players),list(midfielders.players),list(forwards.players)]\n",
+    "\n",
+    "result = finalknapsack(budget,points_grid,prices_grid)\n",
+    "result"
    ]
   }
  ],
