--- a/teamchoice.ipynb
+++ b/teamchoice.ipynb
@@ -572,37 +572,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "memo = dict() ##\n",
-    "def finalknapsack(budget,points_grid,prices_grid):\n",
+    "def finalknapsack(budget,points_grid,prices_grid,players_grid):\n",
     "    ## Base cases\n",
     "    if budget == 0:\n",
-    "        return 0 if len(prices_grid) == 0 else float('-inf')\n",
+    "        return [0,[]] if len(prices_grid) == 0 else [float('-inf'),[]]\n",
     "    if len(prices_grid) == 0:\n",
-    "        return 0\n",
+    "        return [0,[]]\n",
     "    if len(prices_grid[0]) == 0:\n",
-    "        return float('-inf')\n",
+    "        return [float('-inf'),[]]\n",
     "                \n",
     "    ## Retrieve solutions from the memo\n",
     "    if (budget,len(prices_grid), len(prices_grid[0])) in memo.keys():\n",
-    "        return memo[(budget,len(prices_grid), len(prices_grid[0]))]\n",
+    "        return memo[(budget,len(prices_grid),len(prices_grid[0]))]\n",
     "    \n",
     "    ## Repetitive sub-problem\n",
     "    if prices_grid[0][0] > budget:\n",
     "        points_grid[0] = points_grid[0][1:]\n",
     "        prices_grid[0] = prices_grid[0][1:]\n",
-    "        memo[(budget,len(prices_grid), len(prices_grid[0]))] = finalknapsack(budget,points_grid,prices_grid)\n",
+    "        players_grid[0] = players_grid[0][1:]\n",
+    "        memo[(budget,len(prices_grid), len(prices_grid[0]))] = finalknapsack(budget,points_grid,prices_grid,players_grid)\n",
     "        return memo[(budget,len(prices_grid), len(prices_grid[0]))]\n",
     "    else:\n",
-    "        a = points_grid[0][0] + finalknapsack(budget-prices_grid[0][0],points_grid[1:],prices_grid[1:])\n",
+    "        a = finalknapsack(budget-prices_grid[0][0],points_grid[1:],prices_grid[1:],players_grid[1:])\n",
     "        points_grid[0] = points_grid[0][1:]\n",
     "        prices_grid[0] = prices_grid[0][1:]\n",
-    "        b = finalknapsack(budget,points_grid,prices_grid)\n",
-    "        memo[(budget,len(prices_grid), len(prices_grid[0]))] = max(a,b)\n",
-    "        return memo[(budget,len(prices_grid), len(prices_grid[0]))]"
+    "        players_grid[0] = players_grid[0][1:]\n",
+    "        b = finalknapsack(budget,points_grid,prices_grid,players_grid)\n",
+    "\n",
+    "        if a[0] + points_grid[0][0] >= b[0]:\n",
+    "            memo[(budget,len(prices_grid), len(prices_grid[0]))] = [a[0]+points_grid[0][0],a[1]+[players_grid[0][0]]]\n",
+    "            return memo[(budget,len(prices_grid), len(prices_grid[0]))]\n",
+    "        else:\n",
+    "            memo[(budget,len(prices_grid), len(prices_grid[0]))] = b\n",
+    "            return memo[(budget,len(prices_grid), len(prices_grid[0]))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[53], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m b \u001b[38;5;241m=\u001b[39m [[\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m],[\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m7\u001b[39m],[\u001b[38;5;241m8\u001b[39m,\u001b[38;5;241m9\u001b[39m,\u001b[38;5;241m10\u001b[39m]]\n\u001b[1;32m      3\u001b[0m c \u001b[38;5;241m=\u001b[39m [[[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m],[\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m],[\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m3\u001b[39m]],[[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m],[\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m],[\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m3\u001b[39m]],[[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m],[\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m],[\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m3\u001b[39m]]]\n\u001b[0;32m----> 4\u001b[0m \u001b[43mfinalknapsack\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43mc\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[52], line 23\u001b[0m, in \u001b[0;36mfinalknapsack\u001b[0;34m(budget, points_grid, prices_grid, players_grid)\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m memo[(budget,\u001b[38;5;28mlen\u001b[39m(prices_grid), \u001b[38;5;28mlen\u001b[39m(prices_grid[\u001b[38;5;241m0\u001b[39m]))]\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 23\u001b[0m     a \u001b[38;5;241m=\u001b[39m \u001b[43mfinalknapsack\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbudget\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43mprices_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mpoints_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mprices_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mplayers_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m     points_grid[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m points_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m:]\n\u001b[1;32m     25\u001b[0m     prices_grid[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m prices_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m:]\n",
+      "Cell \u001b[0;32mIn[52], line 23\u001b[0m, in \u001b[0;36mfinalknapsack\u001b[0;34m(budget, points_grid, prices_grid, players_grid)\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m memo[(budget,\u001b[38;5;28mlen\u001b[39m(prices_grid), \u001b[38;5;28mlen\u001b[39m(prices_grid[\u001b[38;5;241m0\u001b[39m]))]\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 23\u001b[0m     a \u001b[38;5;241m=\u001b[39m \u001b[43mfinalknapsack\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbudget\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43mprices_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mpoints_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mprices_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mplayers_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m     points_grid[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m points_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m:]\n\u001b[1;32m     25\u001b[0m     prices_grid[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m prices_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m:]\n",
+      "Cell \u001b[0;32mIn[52], line 27\u001b[0m, in \u001b[0;36mfinalknapsack\u001b[0;34m(budget, points_grid, prices_grid, players_grid)\u001b[0m\n\u001b[1;32m     25\u001b[0m prices_grid[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m prices_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m:]\n\u001b[1;32m     26\u001b[0m players_grid[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m players_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m:]\n\u001b[0;32m---> 27\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[43mfinalknapsack\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbudget\u001b[49m\u001b[43m,\u001b[49m\u001b[43mpoints_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43mprices_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43mplayers_grid\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m a[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m points_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m>\u001b[39m b[\u001b[38;5;241m0\u001b[39m]:\n\u001b[1;32m     30\u001b[0m     memo[(budget,\u001b[38;5;28mlen\u001b[39m(prices_grid), \u001b[38;5;28mlen\u001b[39m(prices_grid[\u001b[38;5;241m0\u001b[39m]))] \u001b[38;5;241m=\u001b[39m [a[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m+\u001b[39mpoints_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m],a[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m+\u001b[39m[players_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m]]]\n",
+      "Cell \u001b[0;32mIn[52], line 27\u001b[0m, in \u001b[0;36mfinalknapsack\u001b[0;34m(budget, points_grid, prices_grid, players_grid)\u001b[0m\n\u001b[1;32m     25\u001b[0m prices_grid[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m prices_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m:]\n\u001b[1;32m     26\u001b[0m players_grid[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m players_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m:]\n\u001b[0;32m---> 27\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[43mfinalknapsack\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbudget\u001b[49m\u001b[43m,\u001b[49m\u001b[43mpoints_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43mprices_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43mplayers_grid\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m a[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m points_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m>\u001b[39m b[\u001b[38;5;241m0\u001b[39m]:\n\u001b[1;32m     30\u001b[0m     memo[(budget,\u001b[38;5;28mlen\u001b[39m(prices_grid), \u001b[38;5;28mlen\u001b[39m(prices_grid[\u001b[38;5;241m0\u001b[39m]))] \u001b[38;5;241m=\u001b[39m [a[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m+\u001b[39mpoints_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m],a[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m+\u001b[39m[players_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m]]]\n",
+      "Cell \u001b[0;32mIn[52], line 29\u001b[0m, in \u001b[0;36mfinalknapsack\u001b[0;34m(budget, points_grid, prices_grid, players_grid)\u001b[0m\n\u001b[1;32m     26\u001b[0m players_grid[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m players_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m:]\n\u001b[1;32m     27\u001b[0m b \u001b[38;5;241m=\u001b[39m finalknapsack(budget,points_grid,prices_grid,players_grid)\n\u001b[0;32m---> 29\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m a[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m \u001b[43mpoints_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m>\u001b[39m b[\u001b[38;5;241m0\u001b[39m]:\n\u001b[1;32m     30\u001b[0m     memo[(budget,\u001b[38;5;28mlen\u001b[39m(prices_grid), \u001b[38;5;28mlen\u001b[39m(prices_grid[\u001b[38;5;241m0\u001b[39m]))] \u001b[38;5;241m=\u001b[39m [a[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m+\u001b[39mpoints_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m],a[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m+\u001b[39m[players_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m]]]\n\u001b[1;32m     31\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m memo[(budget,\u001b[38;5;28mlen\u001b[39m(prices_grid), \u001b[38;5;28mlen\u001b[39m(prices_grid[\u001b[38;5;241m0\u001b[39m]))]\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "a = [[2,3,4],[5,6,7],[8,9,10]]\n",
+    "b = [[2,3,4],[5,6,7],[8,9,10]]\n",
+    "c = [[[1,1],[2,2],[3,3]],[[1,1],[2,2],[3,3]],[[1,1],[2,2],[3,3]]]\n",
+    "finalknapsack(20,a,b,c)"
    ]
   },
   {
