--- a/teamchoice.ipynb
+++ b/teamchoice.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "4  0.00000  0.00000  0.00000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "686  0.49764  0.46681  0.48561    2.36600       0.525778  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "(22.0, 53.6, 5)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "(12, [0, 3])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,13 +599,15 @@
     "        return memo[(budget,len(prices_grid), len(prices_grid[0]))]\n",
     "    else:\n",
     "        a = finalknapsack(budget-prices_grid[0][0],points_grid[1:],prices_grid[1:],players_grid[1:])\n",
+    "        c = [points_grid[0][0],[players_grid[0][0]]]\n",
+    "\n",
     "        points_grid[0] = points_grid[0][1:]\n",
     "        prices_grid[0] = prices_grid[0][1:]\n",
     "        players_grid[0] = players_grid[0][1:]\n",
     "        b = finalknapsack(budget,points_grid,prices_grid,players_grid)\n",
     "\n",
-    "        if a[0] + points_grid[0][0] >= b[0]:\n",
-    "            memo[(budget,len(prices_grid), len(prices_grid[0]))] = [a[0]+points_grid[0][0],a[1]+[players_grid[0][0]]]\n",
+    "        if a[0] + c[0] >= b[0]:\n",
+    "            memo[(budget,len(prices_grid), len(prices_grid[0]))] = [a[0]+c[0],a[1]+c[1]]\n",
     "            return memo[(budget,len(prices_grid), len(prices_grid[0]))]\n",
     "        else:\n",
     "            memo[(budget,len(prices_grid), len(prices_grid[0]))] = b\n",
@@ -614,27 +616,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[53], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m b \u001b[38;5;241m=\u001b[39m [[\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m],[\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m7\u001b[39m],[\u001b[38;5;241m8\u001b[39m,\u001b[38;5;241m9\u001b[39m,\u001b[38;5;241m10\u001b[39m]]\n\u001b[1;32m      3\u001b[0m c \u001b[38;5;241m=\u001b[39m [[[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m],[\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m],[\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m3\u001b[39m]],[[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m],[\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m],[\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m3\u001b[39m]],[[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m],[\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m],[\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m3\u001b[39m]]]\n\u001b[0;32m----> 4\u001b[0m \u001b[43mfinalknapsack\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43mc\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[52], line 23\u001b[0m, in \u001b[0;36mfinalknapsack\u001b[0;34m(budget, points_grid, prices_grid, players_grid)\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m memo[(budget,\u001b[38;5;28mlen\u001b[39m(prices_grid), \u001b[38;5;28mlen\u001b[39m(prices_grid[\u001b[38;5;241m0\u001b[39m]))]\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 23\u001b[0m     a \u001b[38;5;241m=\u001b[39m \u001b[43mfinalknapsack\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbudget\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43mprices_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mpoints_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mprices_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mplayers_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m     points_grid[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m points_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m:]\n\u001b[1;32m     25\u001b[0m     prices_grid[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m prices_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m:]\n",
-      "Cell \u001b[0;32mIn[52], line 23\u001b[0m, in \u001b[0;36mfinalknapsack\u001b[0;34m(budget, points_grid, prices_grid, players_grid)\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m memo[(budget,\u001b[38;5;28mlen\u001b[39m(prices_grid), \u001b[38;5;28mlen\u001b[39m(prices_grid[\u001b[38;5;241m0\u001b[39m]))]\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 23\u001b[0m     a \u001b[38;5;241m=\u001b[39m \u001b[43mfinalknapsack\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbudget\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43mprices_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mpoints_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mprices_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mplayers_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m     points_grid[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m points_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m:]\n\u001b[1;32m     25\u001b[0m     prices_grid[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m prices_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m:]\n",
-      "Cell \u001b[0;32mIn[52], line 27\u001b[0m, in \u001b[0;36mfinalknapsack\u001b[0;34m(budget, points_grid, prices_grid, players_grid)\u001b[0m\n\u001b[1;32m     25\u001b[0m prices_grid[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m prices_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m:]\n\u001b[1;32m     26\u001b[0m players_grid[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m players_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m:]\n\u001b[0;32m---> 27\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[43mfinalknapsack\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbudget\u001b[49m\u001b[43m,\u001b[49m\u001b[43mpoints_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43mprices_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43mplayers_grid\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m a[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m points_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m>\u001b[39m b[\u001b[38;5;241m0\u001b[39m]:\n\u001b[1;32m     30\u001b[0m     memo[(budget,\u001b[38;5;28mlen\u001b[39m(prices_grid), \u001b[38;5;28mlen\u001b[39m(prices_grid[\u001b[38;5;241m0\u001b[39m]))] \u001b[38;5;241m=\u001b[39m [a[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m+\u001b[39mpoints_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m],a[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m+\u001b[39m[players_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m]]]\n",
-      "Cell \u001b[0;32mIn[52], line 27\u001b[0m, in \u001b[0;36mfinalknapsack\u001b[0;34m(budget, points_grid, prices_grid, players_grid)\u001b[0m\n\u001b[1;32m     25\u001b[0m prices_grid[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m prices_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m:]\n\u001b[1;32m     26\u001b[0m players_grid[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m players_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m:]\n\u001b[0;32m---> 27\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[43mfinalknapsack\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbudget\u001b[49m\u001b[43m,\u001b[49m\u001b[43mpoints_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43mprices_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43mplayers_grid\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m a[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m points_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m>\u001b[39m b[\u001b[38;5;241m0\u001b[39m]:\n\u001b[1;32m     30\u001b[0m     memo[(budget,\u001b[38;5;28mlen\u001b[39m(prices_grid), \u001b[38;5;28mlen\u001b[39m(prices_grid[\u001b[38;5;241m0\u001b[39m]))] \u001b[38;5;241m=\u001b[39m [a[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m+\u001b[39mpoints_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m],a[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m+\u001b[39m[players_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m]]]\n",
-      "Cell \u001b[0;32mIn[52], line 29\u001b[0m, in \u001b[0;36mfinalknapsack\u001b[0;34m(budget, points_grid, prices_grid, players_grid)\u001b[0m\n\u001b[1;32m     26\u001b[0m players_grid[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m players_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m:]\n\u001b[1;32m     27\u001b[0m b \u001b[38;5;241m=\u001b[39m finalknapsack(budget,points_grid,prices_grid,players_grid)\n\u001b[0;32m---> 29\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m a[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m \u001b[43mpoints_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m>\u001b[39m b[\u001b[38;5;241m0\u001b[39m]:\n\u001b[1;32m     30\u001b[0m     memo[(budget,\u001b[38;5;28mlen\u001b[39m(prices_grid), \u001b[38;5;28mlen\u001b[39m(prices_grid[\u001b[38;5;241m0\u001b[39m]))] \u001b[38;5;241m=\u001b[39m [a[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m+\u001b[39mpoints_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m],a[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m+\u001b[39m[players_grid[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m]]]\n\u001b[1;32m     31\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m memo[(budget,\u001b[38;5;28mlen\u001b[39m(prices_grid), \u001b[38;5;28mlen\u001b[39m(prices_grid[\u001b[38;5;241m0\u001b[39m]))]\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "[20, [[3, 3], [3, 3], [2, 2]]]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "## Test final knapsack algorithm\n",
     "a = [[2,3,4],[5,6,7],[8,9,10]]\n",
     "b = [[2,3,4],[5,6,7],[8,9,10]]\n",
     "c = [[[1,1],[2,2],[3,3]],[[1,1],[2,2],[3,3]],[[1,1],[2,2],[3,3]]]\n",
@@ -659,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +729,7 @@
        "4  29.81739    8.4  [488, 521]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +817,7 @@
        "5  54.69178   20.2  [282, 291, 338, 472, 630]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +905,7 @@
        "4  42.16404   22.6  [111, 168, 174, 285, 619]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +993,7 @@
        "4  18.93582   14.6   [27, 453, 676]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
