Run final knapsack on players data

--- a/teamchoice.ipynb
+++ b/teamchoice.ipynb
@@ -1008,239 +1008,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[1.2206299999999999,\n",
-       "  10.856919999999999,\n",
-       "  11.977229999999999,\n",
-       "  20.1811,\n",
-       "  29.817390000000003,\n",
-       "  29.99474,\n",
-       "  31.953470000000003,\n",
-       "  39.830510000000004,\n",
-       "  40.00786,\n",
-       "  41.03717,\n",
-       "  41.37934],\n",
-       " [29.05626,\n",
-       "  44.177710000000005,\n",
-       "  52.76377000000001,\n",
-       "  54.51690000000001,\n",
-       "  54.69178000000001,\n",
-       "  55.76575000000001,\n",
-       "  57.69376000000001,\n",
-       "  58.64657000000001,\n",
-       "  59.53030000000001,\n",
-       "  59.89542,\n",
-       "  61.82343,\n",
-       "  62.42746000000001,\n",
-       "  63.47174000000001,\n",
-       "  64.01045,\n",
-       "  65.26727000000001,\n",
-       "  65.83882,\n",
-       "  66.90761,\n",
-       "  67.03032,\n",
-       "  67.25773,\n",
-       "  68.67863,\n",
-       "  69.09427,\n",
-       "  70.23027,\n",
-       "  70.36618,\n",
-       "  70.87009,\n",
-       "  71.41677,\n",
-       "  71.83241,\n",
-       "  71.9328,\n",
-       "  73.0688,\n",
-       "  73.10432,\n",
-       "  73.20471,\n",
-       "  73.65472,\n",
-       "  74.00561,\n",
-       "  74.38153,\n",
-       "  74.51744,\n",
-       "  74.93193,\n",
-       "  74.96744999999999,\n",
-       "  75.06783999999999,\n",
-       "  75.32962,\n",
-       "  75.41873000000001,\n",
-       "  75.55203,\n",
-       "  76.15791,\n",
-       "  76.54872,\n",
-       "  77.65035,\n",
-       "  77.75074000000001,\n",
-       "  77.78626,\n",
-       "  78.23627,\n",
-       "  78.33666,\n",
-       "  78.59844,\n",
-       "  79.06347,\n",
-       "  79.51347999999999,\n",
-       "  79.61386999999999,\n",
-       "  79.64939000000001,\n",
-       "  79.87565000000001,\n",
-       "  80.01156,\n",
-       "  80.26205999999999,\n",
-       "  80.36245,\n",
-       "  80.39796999999999,\n",
-       "  80.40966,\n",
-       "  80.76308,\n",
-       "  80.77476999999999,\n",
-       "  81.12525,\n",
-       "  81.16076999999999,\n",
-       "  81.17246,\n",
-       "  81.51166,\n",
-       "  81.55886999999998,\n",
-       "  81.60803999999999,\n",
-       "  81.63005999999999,\n",
-       "  81.65525,\n",
-       "  82.00613999999999],\n",
-       " [18.82408,\n",
-       "  25.79296,\n",
-       "  36.17637,\n",
-       "  38.62645,\n",
-       "  42.16403999999999,\n",
-       "  44.417139999999996,\n",
-       "  47.21922,\n",
-       "  49.38226999999999,\n",
-       "  49.45795999999999,\n",
-       "  51.635369999999995,\n",
-       "  51.68630999999999,\n",
-       "  56.65353999999999,\n",
-       "  57.97503999999999,\n",
-       "  58.906639999999996,\n",
-       "  60.42511999999999,\n",
-       "  62.86119999999999,\n",
-       "  64.37968,\n",
-       "  65.06794,\n",
-       "  66.63278,\n",
-       "  68.74924999999999,\n",
-       "  70.31409,\n",
-       "  70.38358,\n",
-       "  72.52082999999999,\n",
-       "  74.06488999999999,\n",
-       "  76.17358999999999,\n",
-       "  77.56165,\n",
-       "  78.04297,\n",
-       "  79.40248,\n",
-       "  79.5462,\n",
-       "  79.66444,\n",
-       "  80.04099,\n",
-       "  80.97567000000001,\n",
-       "  81.39264,\n",
-       "  81.51087999999999,\n",
-       "  81.61418,\n",
-       "  81.70665,\n",
-       "  82.12361999999999,\n",
-       "  82.22911,\n",
-       "  82.24186,\n",
-       "  82.83752000000001,\n",
-       "  83.65297000000001,\n",
-       "  84.06994,\n",
-       "  84.18818,\n",
-       "  84.29148,\n",
-       "  85.14755,\n",
-       "  86.52113,\n",
-       "  87.25974,\n",
-       "  89.10211,\n",
-       "  89.24583,\n",
-       "  90.66969,\n",
-       "  91.08666,\n",
-       "  91.2049,\n",
-       "  91.3082,\n",
-       "  91.57359,\n",
-       "  92.65985,\n",
-       "  93.39083,\n",
-       "  93.76956999999999,\n",
-       "  93.83391999999999,\n",
-       "  94.25088999999998,\n",
-       "  95.33715,\n",
-       "  95.34276,\n",
-       "  95.82407999999998,\n",
-       "  96.47461,\n",
-       "  98.96513,\n",
-       "  99.3821,\n",
-       "  99.44645,\n",
-       "  99.86342,\n",
-       "  100.94968,\n",
-       "  100.95528999999999,\n",
-       "  101.43661,\n",
-       "  101.68627000000001,\n",
-       "  102.16758999999999,\n",
-       "  102.54632999999998,\n",
-       "  103.63259,\n",
-       "  104.11390999999999,\n",
-       "  104.11952,\n",
-       "  104.77005,\n",
-       "  105.25137,\n",
-       "  105.25697999999998,\n",
-       "  106.50441,\n",
-       "  106.54135,\n",
-       "  108.70536,\n",
-       "  109.12233,\n",
-       "  110.20859,\n",
-       "  110.68991,\n",
-       "  110.69551999999999,\n",
-       "  111.4265,\n",
-       "  113.37281999999999,\n",
-       "  114.51028],\n",
-       " [1.14059,\n",
-       "  8.05884,\n",
-       "  10.85942,\n",
-       "  17.768990000000002,\n",
-       "  18.93582,\n",
-       "  23.388460000000002,\n",
-       "  25.39701,\n",
-       "  28.84528,\n",
-       "  30.214219999999997,\n",
-       "  31.381049999999995,\n",
-       "  32.98932,\n",
-       "  33.37885,\n",
-       "  34.829319999999996,\n",
-       "  34.95561,\n",
-       "  35.60547,\n",
-       "  36.56231,\n",
-       "  36.77013,\n",
-       "  37.41999,\n",
-       "  37.665659999999995,\n",
-       "  38.136039999999994,\n",
-       "  38.44181,\n",
-       "  38.912189999999995,\n",
-       "  39.15786,\n",
-       "  39.387010000000004,\n",
-       "  39.53093,\n",
-       "  40.163160000000005,\n",
-       "  40.68683,\n",
-       "  40.87921,\n",
-       "  41.46298,\n",
-       "  41.70865,\n",
-       "  42.17903,\n",
-       "  43.43,\n",
-       "  43.553259999999995,\n",
-       "  43.66369,\n",
-       "  44.61802,\n",
-       "  45.91784,\n",
-       "  46.0411,\n",
-       "  47.292069999999995,\n",
-       "  47.52576,\n",
-       "  48.295739999999995,\n",
-       "  49.10416,\n",
-       "  49.230450000000005,\n",
-       "  49.88031,\n",
-       "  50.12598,\n",
-       "  50.59636,\n",
-       "  51.84733,\n",
-       "  53.147149999999996,\n",
-       "  53.27041,\n",
-       "  54.33517,\n",
-       "  54.52138000000001,\n",
-       "  54.75507,\n",
-       "  55.7094,\n",
-       "  57.00922]]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[273.28044, [[82, 110, 268], [17, 71, 106, 182, 328], [255, 267, 311, 436, 495], [91, 248]]]\n"
+     ]
     }
    ],
    "source": [
@@ -1248,8 +1024,89 @@
     "prices_grid = [list(goalkeepers.price),list(defenders.price),list(midfielders.price),list(forwards.price)]\n",
     "players_grid = [list(goalkeepers.players),list(defenders.players),list(midfielders.players),list(forwards.players)]\n",
     "\n",
-    "result = finalknapsack(budget,points_grid,prices_grid)\n",
-    "result"
+    "result = finalknapsack(100,points_grid,prices_grid,players_grid)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Pos</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>14_pts</th>\n",
+       "      <th>15_pts</th>\n",
+       "      <th>16_pts</th>\n",
+       "      <th>17_pts</th>\n",
+       "      <th>18_pts</th>\n",
+       "      <th>19_pts</th>\n",
+       "      <th>20_pts</th>\n",
+       "      <th>total_pts</th>\n",
+       "      <th>pts_per_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>247</th>\n",
+       "      <td>248</td>\n",
+       "      <td>Leno</td>\n",
+       "      <td>FUL</td>\n",
+       "      <td>GK</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.79962</td>\n",
+       "      <td>3.75632</td>\n",
+       "      <td>5.16383</td>\n",
+       "      <td>3.39394</td>\n",
+       "      <td>4.44575</td>\n",
+       "      <td>3.75893</td>\n",
+       "      <td>3.28876</td>\n",
+       "      <td>20.55946</td>\n",
+       "      <td>4.111892</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ID  Name Team Pos  Price   14_pts   15_pts   16_pts   17_pts   18_pts  \\\n",
+       "247  248  Leno  FUL  GK    5.0  3.79962  3.75632  5.16383  3.39394  4.44575   \n",
+       "\n",
+       "      19_pts   20_pts  total_pts  pts_per_price  \n",
+       "247  3.75893  3.28876   20.55946       4.111892  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions[predictions.ID == 248]"
    ]
   }
  ],
