--- a/notebooks/fplchallengechoice.ipynb
+++ b/notebooks/fplchallengechoice.ipynb
@@ -718,6 +718,336 @@
     "final_result[2] += list(df[df.Pos == 'GK'].ID[:1])\n",
     "print(final_result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Pos</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>17_pts_no_prob</th>\n",
+       "      <th>17_prob</th>\n",
+       "      <th>17_with_prob</th>\n",
+       "      <th>18_pts_no_prob</th>\n",
+       "      <th>18_prob</th>\n",
+       "      <th>...</th>\n",
+       "      <th>22_prob</th>\n",
+       "      <th>22_with_prob</th>\n",
+       "      <th>23_pts_no_prob</th>\n",
+       "      <th>23_prob</th>\n",
+       "      <th>23_with_prob</th>\n",
+       "      <th>24_pts_no_prob</th>\n",
+       "      <th>24_prob</th>\n",
+       "      <th>24_with_prob</th>\n",
+       "      <th>multiplier</th>\n",
+       "      <th>chosen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>365</th>\n",
+       "      <td>366</td>\n",
+       "      <td>B.Fernandes</td>\n",
+       "      <td>MUN</td>\n",
+       "      <td>MID</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>9.88484</td>\n",
+       "      <td>0.94121</td>\n",
+       "      <td>4.65187</td>\n",
+       "      <td>4.95893</td>\n",
+       "      <td>0.94121</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.94121</td>\n",
+       "      <td>5.01324</td>\n",
+       "      <td>4.86993</td>\n",
+       "      <td>0.94121</td>\n",
+       "      <td>4.58364</td>\n",
+       "      <td>5.23666</td>\n",
+       "      <td>0.94121</td>\n",
+       "      <td>4.92881</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>502</th>\n",
+       "      <td>503</td>\n",
+       "      <td>Son</td>\n",
+       "      <td>TOT</td>\n",
+       "      <td>MID</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>8.97804</td>\n",
+       "      <td>0.94199</td>\n",
+       "      <td>4.22860</td>\n",
+       "      <td>3.92844</td>\n",
+       "      <td>0.94199</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.94199</td>\n",
+       "      <td>3.37685</td>\n",
+       "      <td>5.79242</td>\n",
+       "      <td>0.94199</td>\n",
+       "      <td>5.45639</td>\n",
+       "      <td>4.15604</td>\n",
+       "      <td>0.94199</td>\n",
+       "      <td>3.91494</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>47</td>\n",
+       "      <td>Martinez</td>\n",
+       "      <td>AVL</td>\n",
+       "      <td>GK</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>7.81236</td>\n",
+       "      <td>0.94938</td>\n",
+       "      <td>3.70843</td>\n",
+       "      <td>4.61405</td>\n",
+       "      <td>0.94938</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.94938</td>\n",
+       "      <td>4.58613</td>\n",
+       "      <td>3.38601</td>\n",
+       "      <td>0.94938</td>\n",
+       "      <td>3.21460</td>\n",
+       "      <td>4.07342</td>\n",
+       "      <td>0.94938</td>\n",
+       "      <td>3.86721</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>99</td>\n",
+       "      <td>Mbeumo</td>\n",
+       "      <td>BRE</td>\n",
+       "      <td>MID</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>7.67106</td>\n",
+       "      <td>0.94123</td>\n",
+       "      <td>3.61012</td>\n",
+       "      <td>3.18675</td>\n",
+       "      <td>0.94123</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.94123</td>\n",
+       "      <td>3.16058</td>\n",
+       "      <td>3.10592</td>\n",
+       "      <td>0.94123</td>\n",
+       "      <td>2.92338</td>\n",
+       "      <td>3.54694</td>\n",
+       "      <td>0.94123</td>\n",
+       "      <td>3.33849</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>513</th>\n",
+       "      <td>514</td>\n",
+       "      <td>Bowen</td>\n",
+       "      <td>WHU</td>\n",
+       "      <td>MID</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>7.31868</td>\n",
+       "      <td>0.93719</td>\n",
+       "      <td>3.42948</td>\n",
+       "      <td>4.22595</td>\n",
+       "      <td>0.93719</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.93719</td>\n",
+       "      <td>3.35483</td>\n",
+       "      <td>3.34284</td>\n",
+       "      <td>0.93719</td>\n",
+       "      <td>3.13287</td>\n",
+       "      <td>3.23684</td>\n",
+       "      <td>0.93719</td>\n",
+       "      <td>3.03353</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>110</td>\n",
+       "      <td>Wissa</td>\n",
+       "      <td>BRE</td>\n",
+       "      <td>FWD</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>6.55084</td>\n",
+       "      <td>0.93707</td>\n",
+       "      <td>3.06931</td>\n",
+       "      <td>2.64379</td>\n",
+       "      <td>0.93707</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.93707</td>\n",
+       "      <td>2.62189</td>\n",
+       "      <td>2.70392</td>\n",
+       "      <td>0.93707</td>\n",
+       "      <td>2.53378</td>\n",
+       "      <td>2.98818</td>\n",
+       "      <td>0.93707</td>\n",
+       "      <td>2.80015</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>254</th>\n",
+       "      <td>255</td>\n",
+       "      <td>Robinson</td>\n",
+       "      <td>FUL</td>\n",
+       "      <td>DEF</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>6.46704</td>\n",
+       "      <td>0.94123</td>\n",
+       "      <td>3.04350</td>\n",
+       "      <td>3.40584</td>\n",
+       "      <td>0.94123</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.94123</td>\n",
+       "      <td>3.16343</td>\n",
+       "      <td>3.19159</td>\n",
+       "      <td>0.94123</td>\n",
+       "      <td>3.00403</td>\n",
+       "      <td>3.43580</td>\n",
+       "      <td>0.94123</td>\n",
+       "      <td>3.23389</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>494</th>\n",
+       "      <td>495</td>\n",
+       "      <td>Pedro Porro</td>\n",
+       "      <td>TOT</td>\n",
+       "      <td>DEF</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>6.44892</td>\n",
+       "      <td>0.94123</td>\n",
+       "      <td>3.03495</td>\n",
+       "      <td>3.29699</td>\n",
+       "      <td>0.94123</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.94123</td>\n",
+       "      <td>3.03997</td>\n",
+       "      <td>3.54898</td>\n",
+       "      <td>0.94123</td>\n",
+       "      <td>3.34039</td>\n",
+       "      <td>3.72323</td>\n",
+       "      <td>0.94123</td>\n",
+       "      <td>3.50439</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>44</td>\n",
+       "      <td>Konsa</td>\n",
+       "      <td>AVL</td>\n",
+       "      <td>DEF</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>6.20560</td>\n",
+       "      <td>0.91498</td>\n",
+       "      <td>2.83899</td>\n",
+       "      <td>3.22305</td>\n",
+       "      <td>0.91498</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.91498</td>\n",
+       "      <td>2.92580</td>\n",
+       "      <td>3.17323</td>\n",
+       "      <td>0.91498</td>\n",
+       "      <td>2.90343</td>\n",
+       "      <td>3.05309</td>\n",
+       "      <td>0.91498</td>\n",
+       "      <td>2.79351</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ID         Name Team  Pos  Price  17_pts_no_prob  17_prob  17_with_prob  \\\n",
+       "365  366  B.Fernandes  MUN  MID    8.4         9.88484  0.94121       4.65187   \n",
+       "502  503          Son  TOT  MID    9.8         8.97804  0.94199       4.22860   \n",
+       "46    47     Martinez  AVL   GK    5.0         7.81236  0.94938       3.70843   \n",
+       "98    99       Mbeumo  BRE  MID    7.6         7.67106  0.94123       3.61012   \n",
+       "513  514        Bowen  WHU  MID    7.4         7.31868  0.93719       3.42948   \n",
+       "109  110        Wissa  BRE  FWD    6.2         6.55084  0.93707       3.06931   \n",
+       "254  255     Robinson  FUL  DEF    4.8         6.46704  0.94123       3.04350   \n",
+       "494  495  Pedro Porro  TOT  DEF    5.6         6.44892  0.94123       3.03495   \n",
+       "43    44        Konsa  AVL  DEF    4.4         6.20560  0.91498       2.83899   \n",
+       "\n",
+       "     18_pts_no_prob  18_prob  ...  22_prob  22_with_prob  23_pts_no_prob  \\\n",
+       "365         4.95893  0.94121  ...  0.94121       5.01324         4.86993   \n",
+       "502         3.92844  0.94199  ...  0.94199       3.37685         5.79242   \n",
+       "46          4.61405  0.94938  ...  0.94938       4.58613         3.38601   \n",
+       "98          3.18675  0.94123  ...  0.94123       3.16058         3.10592   \n",
+       "513         4.22595  0.93719  ...  0.93719       3.35483         3.34284   \n",
+       "109         2.64379  0.93707  ...  0.93707       2.62189         2.70392   \n",
+       "254         3.40584  0.94123  ...  0.94123       3.16343         3.19159   \n",
+       "494         3.29699  0.94123  ...  0.94123       3.03997         3.54898   \n",
+       "43          3.22305  0.91498  ...  0.91498       2.92580         3.17323   \n",
+       "\n",
+       "     23_prob  23_with_prob  24_pts_no_prob  24_prob  24_with_prob  multiplier  \\\n",
+       "365  0.94121       4.58364         5.23666  0.94121       4.92881           2   \n",
+       "502  0.94199       5.45639         4.15604  0.94199       3.91494           2   \n",
+       "46   0.94938       3.21460         4.07342  0.94938       3.86721           2   \n",
+       "98   0.94123       2.92338         3.54694  0.94123       3.33849           2   \n",
+       "513  0.93719       3.13287         3.23684  0.93719       3.03353           2   \n",
+       "109  0.93707       2.53378         2.98818  0.93707       2.80015           2   \n",
+       "254  0.94123       3.00403         3.43580  0.94123       3.23389           2   \n",
+       "494  0.94123       3.34039         3.72323  0.94123       3.50439           2   \n",
+       "43   0.91498       2.90343         3.05309  0.91498       2.79351           2   \n",
+       "\n",
+       "     chosen  \n",
+       "365    True  \n",
+       "502    True  \n",
+       "46     True  \n",
+       "98     True  \n",
+       "513    True  \n",
+       "109    True  \n",
+       "254    True  \n",
+       "494    True  \n",
+       "43     True  \n",
+       "\n",
+       "[9 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## See the players in the optimal final team\n",
+    "df['chosen'] = df.ID.isin(final_result[2])\n",
+    "df[df['chosen']== True]"
+   ]
   }
  ],
  "metadata": {
